force-app/main/default/objects/Customer_Health_Alert__e/Customer_Health_Alert__e.object-meta.xml
<CustomObject>
    <description>Publicado quando o Customer Health Score cai para Crítico ou Em Risco. Dispara alertas de retenção para equipe de CS.</description>
    <label>Customer Health Alert</label>
    <pluralLabel>Customer Health Alert Events</pluralLabel>
</CustomObject>