force-app/main/default/objects/Customer_Health_Alert__e/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>