force-app/main/default/objects/Customer_Health_Alert__e/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <label>Previous Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>